@@ -25,6 +25,8 @@
 #include "wx/print.h"
 #include "wx/printdlg.h"
 
+#include <limits.h> // INT_MAX
+
 //--------------------------------------------------------------------------------
 // wxHtmlDCRenderer
 //                  This class is capable of rendering HTML into specified 
@@ -39,7 +41,7 @@ public:
 
     // Following 3 methods *must* be called before any call to Render:
 
-    // Asign DC to this render
+    // Assign DC to this render
     void SetDC(wxDC *dc, double pixel_scale = 1.0);
 
     // Sets size of output rectangle, in pixels. Note that you *can't* change
@@ -57,15 +59,23 @@ public:
     void SetFonts(wxString normal_face, wxString fixed_face, const int *sizes = NULL);
 
     // [x,y] is position of upper-left corner of printing rectangle (see SetSize)
-    // from is y-coordinate of the very first visible cell 
+    // from is y-coordinate of the very first visible cell
+    // to is y-coordinate of the next following page break, if any
     // Returned value is y coordinate of first cell than didn't fit onto page.
     // Use this value as 'from' in next call to Render in order to print multiple pages
     // document
     // If dont_render is TRUE then nothing is rendered into DC and it only counts
     // pixels and return y coord of the next page
     //
-    // CAUTION! Render() changes DC's user scale and does NOT restore it! 
-    int Render(int x, int y, int from = 0, int dont_render = FALSE);
+    // known_pagebreaks and number_of_pages are used only when counting pages;
+    // otherwise, their default values should be used. Their purpose is to
+    // support pagebreaks using a subset of CSS2's <DIV>. The <DIV> handler
+    // needs to know what pagebreaks have already been set so that it doesn't
+    // set the same pagebreak twice.
+    //
+    // CAUTION! Render() changes DC's user scale and does NOT restore it!
+    int Render(int x, int y, int from = 0, int dont_render = FALSE, int to = INT_MAX,
+               int *known_pagebreaks = NULL, int number_of_pages = 0);
 
     // returns total height of the html document
     // (compare Render's return value with this)
@@ -221,7 +231,7 @@ public:
             // return page setting data objects. 
             // (You can set their parameters.)
 
-protected:                
+protected:
     virtual wxHtmlPrintout *CreatePrintout();
     virtual bool DoPreview(wxHtmlPrintout *printout1, wxHtmlPrintout *printout2);
     virtual bool DoPrint(wxHtmlPrintout *printout);
