@@ -150,6 +150,8 @@ wxUniv:
 wxHTML:
 
 - added SetFonts to HTML printing classes (Adrian Philip Look)
+- it is now possible to force page break when printing by inserting
+  <div style="page-break-before:always"> into the markup (Greg Chicares)
 
 
 OLD CHANGES
